# BioAgentEval

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/hle_bio_chem/train/: dataset_info.json  state.json
docs/: guide.md
docs/plans/: 2026-02-13-eval-harness.md
results/: report.json
scripts/: convert_hle_bio_chem.py
src/bioagenteval/: __init__.py  __main__.py  harness.py  loader.py  metrics.py  models.py  reporter.py  runner.py
src/bioagenteval/agents/: __init__.py  baseline_qa.py
src/bioagenteval/graders/: __init__.py  base.py  code_grader.py  human_grader.py  model_grader.py
src/pankeval/: __init__.py  __main__.py  harness.py  loader.py  reporter.py  runner.py
src/pankeval/agents/: __init__.py  baseline_qa.py
src/pankeval/graders/: __init__.py  base.py  code_grader.py  human_grader.py  model_grader.py
tasks/: biomedical_core.yaml  hle_bio_chem.yaml
tests/: test_baseline_agent.py  test_code_grader.py  test_harness.py  test_human_grader.py  test_integration.py  test_loader.py  test_metrics.py  test_model_grader.py  test_models.py  test_reporter.py  test_runner.py
